Changed the header green to provide more contrast with the white text. Also matched the link color to the new header color because it was also had a contrast issue.

--- a/website-react/src/index.css
+++ b/website-react/src/index.css
@@ -21,13 +21,13 @@ body {
   align-items: stretch;
   align-content: stretch;
 
-  background: #359189;  /* fallback for old browsers */
+  background: #298478;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #488380, #618e9c);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #488380, #618e9c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 a {
-  color: #339999;
+  color: #298478;
   font-weight: bold;
 }
 
